--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,6 @@
 
     "require": {
         "php": ">=5.4.0",
-        "guzzlehttp/guzzle": "dev-master"
+        "guzzlehttp/guzzle": "~4.0"
     }
 }
