--- a/composer.json
+++ b/composer.json
@@ -16,5 +16,11 @@
     "require": {
         "php": ">=5.4.0",
         "guzzlehttp/guzzle": "~4.0"
+    },
+
+    "autoload": {
+        "psr-0": {
+            "Vbc": "src/"
+        }
     }
 }
